@@ -11,6 +11,7 @@
  * 表示中の画像プレビューが閉じてしまう場合がある不具合修正
  * 詳細表示のユーザーアイコンダブルクリックでも発言者のホームを開けるようにした
  * 通信後に例外が起きることがあったバグを修正
+ * TumblrのプレビューでPostTypeが画像以外のためにプレビュー失敗した場合にPostTypeを表示するようにした
 ==== Ver 0.9.1.0(2010/05/19)
  * リスト部のソート順表示が2カラムの場合に対応できていなかった問題を修正
 ==== Ver 0.9.0.0(2010/05/19)
